--- a/baseline/models.ipynb
+++ b/baseline/models.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import timm\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torchvision import models\n",
-    "from torchsummary import summary"
+    "from torchvision import models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,25 +43,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_classes = 29\n",
-    "model = models.segmentation.fcn_resnet50(pretrained=True)\n",
-    "# model.classifier[4] = nn.Conv2d(512, num_classes, kernel_size=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FCN(\n",
+      "torch.Size([2, 21, 512, 512]) torch.Size([2, 21, 512, 512])\n",
+      "tensor([[[[11.7938, 11.7938, 11.7938,  ...,  9.0312,  9.0312,  9.0312],\n",
+      "          [11.7938, 11.7938, 11.7938,  ...,  9.0312,  9.0312,  9.0312],\n",
+      "          [11.7938, 11.7938, 11.7938,  ...,  9.0312,  9.0312,  9.0312],\n",
+      "          ...,\n",
+      "          [ 9.1366,  9.1366,  9.1366,  ...,  8.2315,  8.2315,  8.2315],\n",
+      "          [ 9.1366,  9.1366,  9.1366,  ...,  8.2315,  8.2315,  8.2315],\n",
+      "          [ 9.1366,  9.1366,  9.1366,  ...,  8.2315,  8.2315,  8.2315]],\n",
+      "\n",
+      "         [[ 0.4753,  0.4753,  0.4753,  ..., -0.6482, -0.6482, -0.6482],\n",
+      "          [ 0.4753,  0.4753,  0.4753,  ..., -0.6482, -0.6482, -0.6482],\n",
+      "          [ 0.4753,  0.4753,  0.4753,  ..., -0.6482, -0.6482, -0.6482],\n",
+      "          ...,\n",
+      "          [ 0.6613,  0.6613,  0.6613,  ..., -0.1529, -0.1529, -0.1529],\n",
+      "          [ 0.6613,  0.6613,  0.6613,  ..., -0.1529, -0.1529, -0.1529],\n",
+      "          [ 0.6613,  0.6613,  0.6613,  ..., -0.1529, -0.1529, -0.1529]],\n",
+      "\n",
+      "         [[-2.8087, -2.8087, -2.8087,  ..., -1.0923, -1.0923, -1.0923],\n",
+      "          [-2.8087, -2.8087, -2.8087,  ..., -1.0923, -1.0923, -1.0923],\n",
+      "          [-2.8087, -2.8087, -2.8087,  ..., -1.0923, -1.0923, -1.0923],\n",
+      "          ...,\n",
+      "          [-1.1984, -1.1984, -1.1984,  ..., -0.9066, -0.9066, -0.9066],\n",
+      "          [-1.1984, -1.1984, -1.1984,  ..., -0.9066, -0.9066, -0.9066],\n",
+      "          [-1.1984, -1.1984, -1.1984,  ..., -0.9066, -0.9066, -0.9066]],\n",
+      "\n",
+      "         ...,\n",
+      "\n",
+      "         [[ 0.4875,  0.4875,  0.4875,  ...,  0.1878,  0.1878,  0.1878],\n",
+      "          [ 0.4875,  0.4875,  0.4875,  ...,  0.1878,  0.1878,  0.1878],\n",
+      "          [ 0.4875,  0.4875,  0.4875,  ...,  0.1878,  0.1878,  0.1878],\n",
+      "          ...,\n",
+      "          [-1.4308, -1.4308, -1.4308,  ..., -1.2916, -1.2916, -1.2916],\n",
+      "          [-1.4308, -1.4308, -1.4308,  ..., -1.2916, -1.2916, -1.2916],\n",
+      "          [-1.4308, -1.4308, -1.4308,  ..., -1.2916, -1.2916, -1.2916]],\n",
+      "\n",
+      "         [[ 0.9435,  0.9435,  0.9435,  ..., -0.4803, -0.4803, -0.4803],\n",
+      "          [ 0.9435,  0.9435,  0.9435,  ..., -0.4803, -0.4803, -0.4803],\n",
+      "          [ 0.9435,  0.9435,  0.9435,  ..., -0.4803, -0.4803, -0.4803],\n",
+      "          ...,\n",
+      "          [ 0.5120,  0.5120,  0.5120,  ...,  3.7119,  3.7119,  3.7119],\n",
+      "          [ 0.5120,  0.5120,  0.5120,  ...,  3.7119,  3.7119,  3.7119],\n",
+      "          [ 0.5120,  0.5120,  0.5120,  ...,  3.7119,  3.7119,  3.7119]],\n",
+      "\n",
+      "         [[ 2.1503,  2.1503,  2.1503,  ...,  3.4799,  3.4799,  3.4799],\n",
+      "          [ 2.1503,  2.1503,  2.1503,  ...,  3.4799,  3.4799,  3.4799],\n",
+      "          [ 2.1503,  2.1503,  2.1503,  ...,  3.4799,  3.4799,  3.4799],\n",
+      "          ...,\n",
+      "          [-2.7616, -2.7616, -2.7616,  ..., -0.7183, -0.7183, -0.7183],\n",
+      "          [-2.7616, -2.7616, -2.7616,  ..., -0.7183, -0.7183, -0.7183],\n",
+      "          [-2.7616, -2.7616, -2.7616,  ..., -0.7183, -0.7183, -0.7183]]],\n",
+      "\n",
+      "\n",
+      "        [[[ 9.3684,  9.3684,  9.3684,  ...,  9.1343,  9.1343,  9.1343],\n",
+      "          [ 9.3684,  9.3684,  9.3684,  ...,  9.1343,  9.1343,  9.1343],\n",
+      "          [ 9.3684,  9.3684,  9.3684,  ...,  9.1343,  9.1343,  9.1343],\n",
+      "          ...,\n",
+      "          [ 6.0579,  6.0579,  6.0579,  ...,  7.2493,  7.2493,  7.2493],\n",
+      "          [ 6.0579,  6.0579,  6.0579,  ...,  7.2493,  7.2493,  7.2493],\n",
+      "          [ 6.0579,  6.0579,  6.0579,  ...,  7.2493,  7.2493,  7.2493]],\n",
+      "\n",
+      "         [[-0.4144, -0.4144, -0.4144,  ..., -1.0095, -1.0095, -1.0095],\n",
+      "          [-0.4144, -0.4144, -0.4144,  ..., -1.0095, -1.0095, -1.0095],\n",
+      "          [-0.4144, -0.4144, -0.4144,  ..., -1.0095, -1.0095, -1.0095],\n",
+      "          ...,\n",
+      "          [-0.9669, -0.9669, -0.9669,  ..., -1.1297, -1.1297, -1.1297],\n",
+      "          [-0.9669, -0.9669, -0.9669,  ..., -1.1297, -1.1297, -1.1297],\n",
+      "          [-0.9669, -0.9669, -0.9669,  ..., -1.1297, -1.1297, -1.1297]],\n",
+      "\n",
+      "         [[-2.6623, -2.6623, -2.6623,  ..., -2.1026, -2.1026, -2.1026],\n",
+      "          [-2.6623, -2.6623, -2.6623,  ..., -2.1026, -2.1026, -2.1026],\n",
+      "          [-2.6623, -2.6623, -2.6623,  ..., -2.1026, -2.1026, -2.1026],\n",
+      "          ...,\n",
+      "          [ 0.1207,  0.1207,  0.1207,  ..., -1.3002, -1.3002, -1.3002],\n",
+      "          [ 0.1207,  0.1207,  0.1207,  ..., -1.3002, -1.3002, -1.3002],\n",
+      "          [ 0.1207,  0.1207,  0.1207,  ..., -1.3002, -1.3002, -1.3002]],\n",
+      "\n",
+      "         ...,\n",
+      "\n",
+      "         [[-1.8705, -1.8705, -1.8705,  ...,  0.1388,  0.1388,  0.1388],\n",
+      "          [-1.8705, -1.8705, -1.8705,  ...,  0.1388,  0.1388,  0.1388],\n",
+      "          [-1.8705, -1.8705, -1.8705,  ...,  0.1388,  0.1388,  0.1388],\n",
+      "          ...,\n",
+      "          [-1.0826, -1.0826, -1.0826,  ...,  0.4976,  0.4976,  0.4976],\n",
+      "          [-1.0826, -1.0826, -1.0826,  ...,  0.4976,  0.4976,  0.4976],\n",
+      "          [-1.0826, -1.0826, -1.0826,  ...,  0.4976,  0.4976,  0.4976]],\n",
+      "\n",
+      "         [[ 2.3713,  2.3713,  2.3713,  ...,  0.2767,  0.2767,  0.2767],\n",
+      "          [ 2.3713,  2.3713,  2.3713,  ...,  0.2767,  0.2767,  0.2767],\n",
+      "          [ 2.3713,  2.3713,  2.3713,  ...,  0.2767,  0.2767,  0.2767],\n",
+      "          ...,\n",
+      "          [ 1.0071,  1.0071,  1.0071,  ...,  0.2493,  0.2493,  0.2493],\n",
+      "          [ 1.0071,  1.0071,  1.0071,  ...,  0.2493,  0.2493,  0.2493],\n",
+      "          [ 1.0071,  1.0071,  1.0071,  ...,  0.2493,  0.2493,  0.2493]],\n",
+      "\n",
+      "         [[ 3.3903,  3.3903,  3.3903,  ...,  3.3525,  3.3525,  3.3525],\n",
+      "          [ 3.3903,  3.3903,  3.3903,  ...,  3.3525,  3.3525,  3.3525],\n",
+      "          [ 3.3903,  3.3903,  3.3903,  ...,  3.3525,  3.3525,  3.3525],\n",
+      "          ...,\n",
+      "          [-1.5351, -1.5351, -1.5351,  ..., -0.0285, -0.0285, -0.0285],\n",
+      "          [-1.5351, -1.5351, -1.5351,  ..., -0.0285, -0.0285, -0.0285],\n",
+      "          [-1.5351, -1.5351, -1.5351,  ..., -0.0285, -0.0285, -0.0285]]]],\n",
+      "       grad_fn=<MeanBackward1>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "import numpy as np\n",
+    "num_classes = 29\n",
+    "model = models.segmentation.fcn_resnet50(pretrained=True)\n",
+    "# model.classifier[4] = nn.Conv2d(512, num_classes, kernel_size=1)\n",
+    "# print(model)\n",
+    "# pdb.set_trace()\n",
+    "output = model.forward(torch.rand(2,3,512,512))\n",
+    "out = output['out']\n",
+    "out_aux = output['aux']\n",
+    "print(out.shape, out_aux.shape)\n",
+    "print(torch.mean(torch.stack([out, out_aux], dim=0), dim=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DeepLabV3(\n",
       "  (backbone): IntermediateLayerGetter(\n",
       "    (conv1): Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
       "    (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
@@ -237,12 +354,47 @@
       "      )\n",
       "    )\n",
       "  )\n",
-      "  (classifier): FCNHead(\n",
-      "    (0): Conv2d(2048, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-      "    (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "    (2): ReLU()\n",
-      "    (3): Dropout(p=0.1, inplace=False)\n",
-      "    (4): Conv2d(512, 21, kernel_size=(1, 1), stride=(1, 1))\n",
+      "  (classifier): DeepLabHead(\n",
+      "    (0): ASPP(\n",
+      "      (convs): ModuleList(\n",
+      "        (0): Sequential(\n",
+      "          (0): Conv2d(2048, 256, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "          (2): ReLU()\n",
+      "        )\n",
+      "        (1): ASPPConv(\n",
+      "          (0): Conv2d(2048, 256, kernel_size=(3, 3), stride=(1, 1), padding=(12, 12), dilation=(12, 12), bias=False)\n",
+      "          (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "          (2): ReLU()\n",
+      "        )\n",
+      "        (2): ASPPConv(\n",
+      "          (0): Conv2d(2048, 256, kernel_size=(3, 3), stride=(1, 1), padding=(24, 24), dilation=(24, 24), bias=False)\n",
+      "          (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "          (2): ReLU()\n",
+      "        )\n",
+      "        (3): ASPPConv(\n",
+      "          (0): Conv2d(2048, 256, kernel_size=(3, 3), stride=(1, 1), padding=(36, 36), dilation=(36, 36), bias=False)\n",
+      "          (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "          (2): ReLU()\n",
+      "        )\n",
+      "        (4): ASPPPooling(\n",
+      "          (0): AdaptiveAvgPool2d(output_size=1)\n",
+      "          (1): Conv2d(2048, 256, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "          (3): ReLU()\n",
+      "        )\n",
+      "      )\n",
+      "      (project): Sequential(\n",
+      "        (0): Conv2d(1280, 256, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "        (2): ReLU()\n",
+      "        (3): Dropout(p=0.5, inplace=False)\n",
+      "      )\n",
+      "    )\n",
+      "    (1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+      "    (2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (3): ReLU()\n",
+      "    (4): Conv2d(256, 21, kernel_size=(1, 1), stride=(1, 1))\n",
       "  )\n",
       "  (aux_classifier): FCNHead(\n",
       "    (0): Conv2d(1024, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
@@ -256,23 +408,7 @@
     }
    ],
    "source": [
-    "print(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_classes = 29\n",
-    "model = timm.create_model('hrnet_w18_small_v2', pretrained=False)\n",
-    "\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "model = model.to(device)\n",
-    "\n",
-    "input_size = (3, 224, 224)\n",
-    "summary(model, input_size=input_size, device='cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "model = models.segmentation.deeplabv3_resnet50(pretrained=True)\n",
     "print(model)"
    ]
   }
